<resources>
    <string name="app_name">AndroidKotlinApp 12</string>

    <string name="launch_activity" translatable="false">Launch activity</string>
    <string name="location_updates_label" translatable="false">Location Updates</string>

    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>
    <string name="ok" translatable="false">OK</string>
    <string name="request_location_updates" translatable="false">Request location updates</string>
    <string name="remove_location_updates" translatable="false">Remove location updates</string>

    <string name="location_updated">Location Updated: %1$s</string>

    <string name="temperature_label">Temperature, C</string>
    <string name="feels_like_label">Feels like</string>
    <string name="city_coordinates">lt/ln: %s, %s"</string>
    <string name="error">Error</string>
    <string name="reload">Reload</string>
    <string name="wind_speed_label">Wind_speed, m/s</string>
    <string name="wind_dir_label">Wind direction</string>
    <string name="pressure_label">Pressure, mm</string>
    <string name="humidity_label">Humidity %</string>
    <string name="forecast_date_label">Forecast to</string>
    <string name="min_temperature_label">Min temperature, C</string>
    <string name="max_temperature_label">Maximum Temperature C</string>
    <string name="morning">Morning</string>
    <string name="day">Day</string>
    <string name="russian_other">Russian/Other</string>
    <string name="menu_requestslog">RequestsLog</string>
    <string name="content_provider">Content Provider</string>
    <string name="read_contacts">Contacts access</string>
    <string name="explanation">Explanation</string>
    <string name="access_granted">Access granted</string>
    <string name="access_denied">Access denied</string>
    <string name="close">Close</string>
    <string name="show_me_map">Show me map</string>
    <string name="day_before">day_before</string>
    <string name="day_after">day_after</string>
    <string name="settings">Settings</string>
    <string name="new_position_name">New position name</string>
    <string name="we_found_follow_position">We found follow Position</string>
    <string name="specify">Specify</string>
    <string name="search">Search</string>
</resources>